# crusty-compiler

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: assembler.rs  lib.rs  main.rs
src/compiler/: assembly_generator.rs  ast.rs  common.rs  interpreter.rs  ir.rs  ir_generator.rs  mod.rs  parser.rs  tokenizer.rs  tokens.rs  type_checker.rs  types.rs
tests/: e2e.rs
tests/programs/: basic.tl  break_continue.tl  functions.tl  mixed.tl  operator.tl  scope.tl  types.tl
