[package]
name = "compilers-project"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
libtest-mimic = "0.8"

[dependencies.tempfile]
version = "3"

[[test]]
name = "e2e"
harness = false

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.54", features = ["derive"] }
clap-stdin = "0.8.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
